--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "hardhat": "^2.14.0",
     "hardhat-preprocessor": "^0.1.5"
+  },
+  "dependencies": {
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.3.10"
   }
 }
