--- a/foundry.toml
+++ b/foundry.toml
@@ -5,5 +5,6 @@ libs = ['lib']
 
 [rpc_endpoints]
 mainnet = '${MAINNET_RPC_URL}'
+goerli = '${GOERLI_RPC_URL}'
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
