--- a/foundry.toml
+++ b/foundry.toml
@@ -7,4 +7,6 @@ libs = ['lib']
 mainnet = '${MAINNET_RPC_URL}'
 goerli = '${GOERLI_RPC_URL}'
 
+# gas_reports = ['Mucus', 'DividendsPairStaking', 'FrogsAndDogs', 'MucusFarm']
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
